--- a/website/index.html
+++ b/website/index.html
@@ -63,7 +63,7 @@
         <td>%u</td>
         <td>%u</td>
       </tr>
-      <caption>NOTE: This device is under testing, and is currently displaying evnrionent information of the:
+      <caption>NOTE: This device is under testing, and is currently displaying environment information of the:
         <b>controls
           lab</b>
       </caption>
@@ -77,7 +77,8 @@
       What am I?
     </h2>
     <p>
-      Currently, you're looking at a webserver run on an ESP32 microcontroller, which you connected to with your device.
+      Currently, you're looking at a web server run on an ESP32 micro-controller, which you connected to with your
+      device.
       Right now, <strong>I'm under development by my creators, and just sitting on a table in a lab somewhere.</strong>
     </p>
 
@@ -90,10 +91,10 @@
     <ul>
       <li>DHT11 - temp and humidity (eventually will be a bme680)</li>
       <li>Generic Arduino Water Level Sensor - For detecting rain</li>
-      <li>Photoresistor - For detecting if it's light out or not</li>
+      <li>Photo-resistor - For detecting if it's light out or not</li>
     </ul>
     <p>
-      My brain is an ESP32 Microcontroller, but hopefully in the futre I'll support talking to a higher-order system
+      My brain is an ESP32 micro-controller, but hopefully in the future I'll support talking to a higher-order system
       like a linux computer, or maybe an HTTP API.
     </p>
 
@@ -101,7 +102,7 @@
       Will I Actually Show the Weather For Real?
     </h2>
     <p>
-      At some point! Barring the apocolypse, of course. Currently, I'm on schedule to be up and running showing you the
+      At some point! Barring the apocalypse, of course. Currently, I'm on schedule to be up and running showing you the
       weather by the
       end of the semester. (Hopefully, in a far prettier manner, or even sooner than the end of the semester)
     </p>
@@ -119,7 +120,7 @@
     </h2>
     <p>
       I was designed as a project in the EE department by students in the ECE-398 project class. In time, I'll be an
-      easy and convient way for students to access the Bradley University campus weather.
+      easy and convenient way for students to access the Bradley University campus weather.
     </p>
     <p>
       My current human
@@ -136,7 +137,7 @@
 
     <h2>Contact</h2>
     <p>
-      Comments? Questions? Concearns? Contact: <br>
+      Comments? Questions? Concerns? Contact: <br>
     </p>
     <table>
       <tr>
